@@ -1,3 +1,8 @@
+Sat Jul 30 23:48:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_core.c: an issue that is same as  [ruby-dev:44071].
+	* ext/date/date_strftime.c: identical to [ruby-dev:44112].
+
 Sat Jul 30 23:19:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* defs/default_gems: separate from tool/rbinstall.rb.
